
2011-02-03
Initial Project in ajcodekatas
IExpression, ICommand, IContext

2011-03-05
First commands and expressions
Context with tests
SetLocalVariable by number
Add items from AjLanguage/AjSharp, to be reviewed

2011-03-06
Local variables in parser, with tests
var x=1;
for commands (WIP)