@@ -80,10 +80,12 @@
     <Compile Include="Expressions\CompareExpression.cs" />
     <Compile Include="Expressions\ConcatenateExpression.cs" />
     <Compile Include="Expressions\ConstantExpression.cs" />
+    <Compile Include="Expressions\NamedVariableExpression.cs" />
     <Compile Include="Expressions\DotExpression.cs" />
     <Compile Include="Expressions\GetValueExpression.cs" />
     <Compile Include="Expressions\IExpression.cs" />
     <Compile Include="Expressions\IncrementExpression.cs" />
+    <Compile Include="Expressions\InvokeExpression.cs" />
     <Compile Include="Expressions\NotExpression.cs" />
     <Compile Include="Expressions\OrExpression.cs" />
     <Compile Include="Expressions\UnaryExpression.cs" />
@@ -94,12 +96,14 @@
     <Compile Include="Language\ComparisonOperator.cs" />
     <Compile Include="Language\DynamicObject.cs" />
     <Compile Include="Language\ICallable.cs" />
+    <Compile Include="Language\ILocalCallable.cs" />
     <Compile Include="Language\IncrementOperator.cs" />
     <Compile Include="Language\IObject.cs" />
     <Compile Include="Language\IReference.cs" />
     <Compile Include="Language\Undefined.cs" />
     <Compile Include="ObjectUtilities.cs" />
     <Compile Include="Predicates.cs" />
+    <Compile Include="Primitives\WriteFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringUtilities.cs" />
     <Compile Include="TypeUtilities.cs" />
